--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,55 @@ VITE_ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # Note: You only need ONE of the above API keys
 # The chatbot will automatically use whichever is configured
 # If no API key is provided, it will use smart fallback responses
+
+# ============================================
+# EmailJS Configuration (for Contact Form)
+# ============================================
+# Sign up at: https://www.emailjs.com/
+# 1. Create an account
+# 2. Add an email service (Gmail, Outlook, etc.)
+# 3. Create TWO email templates (see instructions below)
+# 4. Get your Public Key from Account page
+
+VITE_EMAILJS_SERVICE_ID=your_service_id_here
+VITE_EMAILJS_PUBLIC_KEY=your_public_key_here
+
+# Template 1: To receive demo requests (you'll get these emails)
+# Template variables to use: {{to_name}}, {{from_name}}, {{from_email}}, {{phone}}, {{business_name}}, {{business_type}}, {{message}}
+# Example template:
+# Subject: New Demo Request from {{from_name}}
+# Body:
+# New demo booking request!
+#
+# Name: {{from_name}}
+# Email: {{from_email}}
+# Phone: {{phone}}
+# Business: {{business_name}}
+# Industry: {{business_type}}
+# Message: {{message}}
+VITE_EMAILJS_TEMPLATE_ID=your_template_id_here
+
+# Template 2: Auto-reply to customer (they'll get this confirmation)
+# Template variables to use: {{to_name}}, {{to_email}}, {{business_name}}
+# Example template:
+# Subject: Demo Request Received - Invento
+# Body:
+# Hi {{to_name}},
+#
+# Thank you for your interest in Invento for {{business_name}}!
+#
+# We've received your demo request and will contact you within 24 hours to schedule your personalized walkthrough.
+#
+# In the meantime, feel free to explore our website or reach out if you have any questions.
+#
+# Best regards,
+# The Invento Team
+VITE_EMAILJS_AUTO_REPLY_TEMPLATE_ID=your_auto_reply_template_id_here
+
+# ============================================
+# SMS Notifications (Optional - requires backend)
+# ============================================
+# Set to 'true' to enable SMS notifications to customers
+# Requires setting up a backend API endpoint at /api/send-sms
+# Recommended service: Twilio (https://www.twilio.com/)
+VITE_SMS_ENABLED=false
